# Algorithms

./: CMakeLists.txt  PrintArr.cpp  SortedArr.txt  randomizer  randomizer.cpp
include/: binaryInsertionSort.h  binarySearch.h  bubbleSort.h  insertionSort.h  linearSearch.h  progress_bar.h  randomizer.h  searchAlgos.h  selectionSortMax.h  selectionSortMaxMin.h  selectionSortMin.h  shakerSort.h  sortAlgos.h
src/: ArrPrep.cpp  binaryInsertionSort.cpp  binarySearch.cpp  bubbleSort.cpp  indexVectorSort.cpp  insertionSort.cpp  linearSearch.cpp  main.cpp  progress_bar.cpp  randomizer.cpp  selectionSortMax.cpp  selectionSortMaxMin.cpp  selectionSortMin.cpp  shakerSort.cpp
